--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,41 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: newgitblog
+  username: postgres
+  password: 
+  pool: 5
+  timeout: 5000
+  
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: newgitblog_test
+  username: postgres
+  password: 
+  pool: 5
+  timeout: 5000
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: newgitblog
+  username: postgres
+  password: 
+  pool: 5
+  timeout: 5000
